--- a/src/patternfly/base/tokens/palette-dark.scss
+++ b/src/patternfly/base/tokens/palette-dark.scss
@@ -1,59 +1,59 @@
 // stylelint-disable
-:root {
+:where(.pf-v5-theme-dark) {
   // backgrounds
-  --pf-global--background--color--100: var(--pf-color-black);
-  --pf-global--background--color--200: var(--pf-color-gray-800);
-  --pf-global--background--color--300: var(--pf-color-gray-700);
-  --pf-global--background--color--400: var(--pf-color-gray-100);
-  --pf-global--background--color--500: var(--pf-color-gold-300);
-  --pf-global--background--color--600: var(--pf-color-gold-400);
+  --pf--global--background--color--100: var(--pf--global--color--black);
+  --pf--global--background--color--200: var(--pf--global--color--gray--800);
+  --pf--global--background--color--300: var(--pf--global--color--gray--700);
+  --pf--global--background--color--400: var(--pf--global--color--gray--100);
+  --pf--global--background--color--500: var(--pf--global--color--gold--300);
+  --pf--global--background--color--600: var(--pf--global--color--gold--400);
 
   // text
-  --pf-global--text-color--100: var(--pf-color-gray-100);
-  --pf-global--text-color--200: var(--pf-color-gray-400);
-  --pf-global--text-color--300: var(--pf-color-gray-900);
+  --pf--global--color--text--100: var(--pf--global--color--gray--100);
+  --pf--global--color--text--200: var(--pf--global--color--gray--400);
+  --pf--global--color--text--300: var(--pf--global--color--gray--900);
 
   // disabled
-  --pf-global--color--disabled--100: var(--pf-color-gray-400);
-  --pf-global--color--disabled--200: var(--pf-color-gray-500);
-  --pf-global--color--disabled--300: var(--pf-color-gray-600);
+  --pf--global--color--disabled--100: var(--pf--global--color--gray--400);
+  --pf--global--color--disabled--200: var(--pf--global--color--gray--500);
+  --pf--global--color--disabled--300: var(--pf--global--color--gray--600);
 
   // brand
-  --pf-global--color--brand--100: var(--pf-color-blue-400);
-  --pf-global--color--brand--200: var(--pf-color-blue-300);
-  --pf-global--color--brand--300: var(--pf-color-blue-200);
+  --pf--global--color--brand--100: var(--pf--global--color--blue--400);
+  --pf--global--color--brand--200: var(--pf--global--color--blue--300);
+  --pf--global--color--brand--300: var(--pf--global--color--blue--200);
 
   // status
-  --pf-global--color--custom--100: var(--pf-color-cyan-400);
-  --pf-global--color--custom--200: var(--pf-color-cyan-300);
-  --pf-global--color--success--100: var(--pf-color-green-300);
-  --pf-global--color--success--200: var(--pf-color-green-200);
-  --pf-global--color--info--100: var(--pf-color-blue-300);
-  --pf-global--color--info--200: var(--pf-color-blue-400);
-  --pf-global--color--warning--100: var(--pf-color-gold-400);
-  --pf-global--color--warning--200: var(--pf-color-gold-300);
-  --pf-global--color--danger--100: var(--pf-color-orangered-300);
-  --pf-global--color--danger--200: var(--pf-color-orangered-200);
+  --pf--global--color--custom--100: var(--pf--global--color--cyan--400);
+  --pf--global--color--custom--200: var(--pf--global--color--cyan--300);
+  --pf--global--color--success--100: var(--pf--global--color--green--300);
+  --pf--global--color--success--200: var(--pf--global--color--green--200);
+  --pf--global--color--info--100: var(--pf--global--color--blue--300);
+  --pf--global--color--info--200: var(--pf--global--color--blue--400);
+  --pf--global--color--warning--100: var(--pf--global--color--gold--400);
+  --pf--global--color--warning--200: var(--pf--global--color--gold--300);
+  --pf--global--color--danger--100: var(--pf--global--color--orangered--300);
+  --pf--global--color--danger--200: var(--pf--global--color--orangered--200);
 
   // link
-  --pf-global--link--color--100: var(--pf-color-blue-300);
-  --pf-global--link--color--200: var(--pf-color-blue-200);
-  --pf-global--link--color--300: var(--pf-color-purple-300);
+  --pf--global--link--color--100: var(--pf--global--color--blue--300);
+  --pf--global--link--color--200: var(--pf--global--color--blue--200);
+  --pf--global--link--color--300: var(--pf--global--color--purple--300);
 
   // icons colors
-  --pf-global--icon--color--100: var(--pf-color-gray-100);
-  --pf-global--icon--color--200: var(--pf-color-gray-400);
-  --pf-global--icon--color--300: var(--pf-color-gray-900);
+  --pf--global--icon--color--100: var(--pf--global--color--gray--100);
+  --pf--global--icon--color--200: var(--pf--global--color--gray--400);
+  --pf--global--icon--color--300: var(--pf--global--color--gray--900);
 
   // blend modes 
-  --pf-global--mix-blend-mode--100: screen;
+  --pf--global--mix-blend-mode--100: screen;
 
   // shadows
-  --pf-global--box-shadow--sm: 0px 1px 2px, 0px rgba(0, 0, 0, 50%);
-  --pf-global--box-shadow--sm-top: 0px, -1px, 2px, 0px rgba(0, 0, 0, 50%);
-  --pf-global--box-shadow--sm-right: 1px, 0px, 2px, 0px rgba(0, 0, 0, 50%);
-  --pf-global--box-shadow--sm-bottom: 0px, 1px, 2px, 0px rgba(0, 0, 0, 50%);
-  --pf-global--box-shadow--sm-left: -1px, 0px, 2px, 0px rgba(0, 0, 0, 50%);
-  --pf-global--box-shadow--md: 0px, 4px, 8px, 0px rgba(0, 0, 0, 50%);
-  --pf-global--box-shadow--lg: 0px, 8px, 24px, 0px rgba(0, 0, 0, 50%);
+  --pf--global--box-shadow--sm: 0px 1px 2px, 0px rgba(0, 0, 0, 50%);
+  --pf--global--box-shadow--sm-top: 0px, -1px, 2px, 0px rgba(0, 0, 0, 50%);
+  --pf--global--box-shadow--sm-right: 1px, 0px, 2px, 0px rgba(0, 0, 0, 50%);
+  --pf--global--box-shadow--sm-bottom: 0px, 1px, 2px, 0px rgba(0, 0, 0, 50%);
+  --pf--global--box-shadow--sm-left: -1px, 0px, 2px, 0px rgba(0, 0, 0, 50%);
+  --pf--global--box-shadow--md: 0px, 4px, 8px, 0px rgba(0, 0, 0, 50%);
+  --pf--global--box-shadow--lg: 0px, 8px, 24px, 0px rgba(0, 0, 0, 50%);
 }
