--- a/src/patternfly/base/tokens/palette-dark.scss
+++ b/src/patternfly/base/tokens/palette-dark.scss
@@ -49,7 +49,7 @@
   --pf--global--mix-blend-mode--100: screen;
 
   // shadows
-  --pf--global--box-shadow--sm: 0px 1px 2px, 0px rgba(0, 0, 0, 50%);
+  --pf--global--box-shadow--sm: 0px, 1px, 2px, 0px rgba(0, 0, 0, 50%);
   --pf--global--box-shadow--sm-top: 0px, -1px, 2px, 0px rgba(0, 0, 0, 50%);
   --pf--global--box-shadow--sm-right: 1px, 0px, 2px, 0px rgba(0, 0, 0, 50%);
   --pf--global--box-shadow--sm-bottom: 0px, 1px, 2px, 0px rgba(0, 0, 0, 50%);
